<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp.SignUpFragment">

    <Button
        android:id="@+id/register"
        android:layout_width="279dp"
        android:layout_height="44dp"
        android:layout_gravity="start"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="125dp"
        android:background="@drawable/rounded_corners"
        android:enabled="false"
        android:text="@string/action_register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.371"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.953" />

    <EditText
        android:id="@+id/password"
        android:layout_width="242dp"
        android:layout_height="40dp"
        android:layout_marginTop="26dp"
        android:autofillHints="Password"
        android:hint="@string/prompt_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.331"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="241dp"
        android:layout_height="37dp"
        android:layout_marginTop="26dp"
        android:autofillHints="Email Address"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.335"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/name"
        android:layout_width="241dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="Name"
        android:hint="@string/prompt_name"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="215dp"
        android:layout_height="100dp"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/register_textbox"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>